[gd_scene load_steps=5 format=2]

[ext_resource path="res://Snow.png" type="Texture" id=1]
[ext_resource path="res://Strength.tres" type="DynamicFont" id=2]
[ext_resource path="res://Title.gd" type="Script" id=3]
[ext_resource path="res://New Piskel-1.png.png" type="Texture" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 332.0
margin_bottom = 183.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 2000
lifetime = 8.0
speed_scale = 0.5
texture = ExtResource( 4 )
emission_shape = 3
emission_points = PoolVector2Array( 0, 0, 10, 0, 20, 0, 30, 0, 40, 0, 50, 0, 60, 0, 70, 0, 80, 0, 90, 0, 100, 0, 110, 0, 120, 0, 130, 0, 140, 0, 150, 0, 160, 0, 170, 0, 180, 0, 190, 0, 200, 0, 210, 0, 220, 0, 230, 0, 240, 0, 250, 0, 260, 0, 270, 0, 280, 0, 290, 0, 300, 0, 310, 0, 320, 0, 330, 0, 340, 0 )
emission_colors = PoolColorArray(  )
scale_amount = 0.3
color = Color( 0.686275, 0.937255, 0.921569, 1 )

[node name="Label" type="Label" parent="."]
margin_left = 110.168
margin_top = 18.7646
margin_right = 209.168
margin_bottom = 30.7646
custom_fonts/font = ExtResource( 2 )
text = "Summer in Siberia"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 70.6509
margin_top = 36.5229
margin_right = 245.651
margin_bottom = 50.5229
custom_fonts/font = ExtResource( 2 )
text = "A game by CyberPhoenix Games"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkButton" type="LinkButton" parent="."]
margin_left = 113.161
margin_top = 166.449
margin_right = 207.161
margin_bottom = 180.449
custom_fonts/font = ExtResource( 2 )
action_mode = 0
text = "More Games"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkButton2" type="LinkButton" parent="."]
margin_left = 223.329
margin_top = 164.054
margin_right = 317.329
margin_bottom = 178.054
custom_fonts/font = ExtResource( 2 )
action_mode = 0
text = "Youtube"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkButton3" type="LinkButton" parent="."]
margin_left = 6.58607
margin_top = 166.449
margin_right = 100.586
margin_bottom = 180.449
custom_fonts/font = ExtResource( 2 )
action_mode = 0
text = "Twitter"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkButton4" type="LinkButton" parent="."]
margin_left = 144.267
margin_top = 88.1614
margin_right = 169.267
margin_bottom = 102.161
custom_fonts/font = ExtResource( 2 )
action_mode = 0
text = "Play"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="LinkButton" to="." method="_on_LinkButton_pressed"]
[connection signal="pressed" from="LinkButton2" to="." method="_on_LinkButton2_pressed"]
[connection signal="pressed" from="LinkButton3" to="." method="_on_LinkButton3_pressed"]
[connection signal="pressed" from="LinkButton4" to="." method="_on_LinkButton4_pressed"]
